--- a/producto-service-electro/pom.xml
+++ b/producto-service-electro/pom.xml
@@ -22,8 +22,14 @@
 		<spring-cloud.version>2025.0.0</spring-cloud.version>
 		<lombok.version>1.18.38</lombok.version>
 	</properties>
-
 	<dependencies>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.13</version>
+		</dependency>
+
+
 		<!-- Spring Boot básicos -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
