Implementación final con Circuit Breaker y actualización del README

--- a/carrito-service-electro/src/main/resources/application.yml
+++ b/carrito-service-electro/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
 
 spring:
   application:
-    name: carrito-service
+    name: carrito-service-electro   # ⚠️ ojo, que coincida con tu config-data
 
   datasource:
     url: jdbc:mysql://mysql-db:3306/carrito_db?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
@@ -25,3 +25,29 @@ eureka:
   client:
     service-url:
       defaultZone: http://eureka-server:8761/eureka/
+
+# --- Resilience4j (Circuit Breaker + Retry) ---
+resilience4j:
+  circuitbreaker:
+    instances:
+      productosCB:
+        slidingWindowSize: 5
+        failureRateThreshold: 50
+        waitDurationInOpenState: 10s
+  retry:
+    instances:
+      productosRetry:
+        max-attempts: 3
+        wait-duration: 2s
+
+# --- Swagger / OpenAPI ---
+springdoc:
+  swagger-ui:
+    path: /docs
+
+# --- Actuator ---
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
